web/static/css/app/app.css
/* ... */
    input[type="checkbox"]:checked + label:before,
    input[type="radio"]:checked + label:before {
      background-color: #555;
      border-color: #555;
      color: #fff;
      content: '\f00c';
    }

    input[type="checkbox"]:focus + label:before,
    input[type="radio"]:focus + label:before {
      border-color: #C21;
    }

  input[type="checkbox"] + label:before {
    border-radius: 4px;
  }

  input[type="radio"] + label:before {
    border-radius: 100%;
  }

  ::-webkit-input-placeholder {
    opacity: 1.0;
    color: #ccc !important;
  }

  :-moz-placeholder {
    opacity: 1.0;
    color: #ccc !important;
  }

  ::-moz-placeholder {
    opacity: 1.0;
    color: #ccc !important;
  }

  :-ms-input-placeholder {
    opacity: 1.0;
    color: #ccc !important;
  }

  .formerize-placeholder {
    opacity: 1.0;
    color: #ccc !important;
  }

  .field {
    margin: 0 0 1.25em 0;
  }

/* Icon */

  .icon {
    text-decoration: none;
    border-bottom: none;
    position: relative;
  }

    .icon:before {
      -moz-osx-font-smoothing: grayscale;
      -webkit-font-smoothing: antialiased;
      font-family: FontAwesome;
      font-style: normal;
      font-weight: normal;
      text-transform: none !important;
    }

    .icon > .label {
      display: none;
    }

/* List */

  ol {
    list-style: decimal;
    margin: 0 0 1.25em 0;
    padding-left: 1.25em;
  }

    ol li {
      padding-left: 0.25em;
    }

  ul {
    list-style: disc;
    margin: 0 0 1.25em 0;
    padding-left: 1em;
  }

    ul li {
      padding-left: 0.5em;
    }

    ul.alt {
      list-style: none;
      padding-left: 0;
    }

      ul.alt li {
        border-top: solid 1px #ccc;
        padding: 0.5em 0;
      }

        ul.alt li:first-child {
          border-top: 0;
          padding-top: 0;
        }

    ul.icons {
      cursor: default;
      list-style: none;
      padding-left: 0;
    }

      ul.icons li {
        display: inline-block;
        padding: 0 1em 0 0;
      }

        ul.icons li:last-child {
          padding-right: 0;
        }

        ul.icons li .icon:before {
          font-size: 1.5rem;
        }

    ul.actions {
      cursor: default;
      list-style: none;
      padding-left: 0;
    }

      ul.actions li {
        display: inline-block;
        padding: 0 0.625em 0 0;
        vertical-align: middle;
      }

        ul.actions li:last-child {
          padding-right: 0;
        }

      ul.actions.small li {
        padding: 0 0.3125em 0 0;
      }

      ul.actions.vertical li {
        display: block;
        padding: 0.625em 0 0 0;
      }

        ul.actions.vertical li:first-child {
          padding-top: 0;
        }

        ul.actions.vertical li > * {
          margin-bottom: 0;
        }

      ul.actions.vertical.small li {
        padding: 0.3125em 0 0 0;
      }

        ul.actions.vertical.small li:first-child {
          padding-top: 0;
        }

      ul.actions.fit {
        display: table;
        margin-left: -0.625em;
        padding: 0;
        table-layout: fixed;
        width: calc(100% + 0.625em);
      }

        ul.actions.fit li {
          display: table-cell;
          padding: 0 0 0 0.625em;
        }

          ul.actions.fit li > * {
            margin-bottom: 0;
          }

        ul.actions.fit.small {
          margin-left: -0.3125em;
          width: calc(100% + 0.3125em);
        }

          ul.actions.fit.small li {
            padding: 0 0 0 0.3125em;
          }

  dl {
    margin: 0 0 1.25em 0;
  }

    dl dt {
      display: block;
      font-weight: 400;
      margin: 0 0 0.625em 0;
    }

    dl dd {
      margin-left: 1.25em;
    }

/* Main */

  #main {
    -moz-transition: opacity 0.75s ease, right 0.75s ease, left 0.75s ease, visibility 0.75s;
    -webkit-transition: opacity 0.75s ease, right 0.75s ease, left 0.75s ease, visibility 0.75s;
    -ms-transition: opacity 0.75s ease, right 0.75s ease, left 0.75s ease, visibility 0.75s;
    transition: opacity 0.75s ease, right 0.75s ease, left 0.75s ease, visibility 0.75s;
    -webkit-overflow-scrolling: touch;
    position: fixed;
    top: 0;
    width: 22.5em;
    height: 100%;
    background: #fff;
    outline: 0;
    overflow-x: hidden;
    overflow-y: scroll;
    text-align: right;
    visibility: visible;
    z-index: 10000;
    right: 0;
  }

    #main .toggle {
      -webkit-tap-highlight-color: transparent;
      position: absolute;
      top: 0;
      width: 4em;
      height: 4em;
      background-image: url("images/close-small-alt.svg");
      background-repeat: no-repeat;
      background-size: 32px 32px;
      cursor: pointer;
      display: block;
      z-index: 1;
      background-position: 0.5em 0.5em;
      left: 0;
    }

    body.fullscreen #main {
      visibility: hidden;
      right: -22.5em;
    }

    body.is-loading-1 #main {
      opacity: 0;
      right: -2em;
    }

    @media screen and (max-width: 1280px) {

      #main {
        width: 19em;
      }

        body.fullscreen #main {
          right: -19em;
        }

    }

    @media screen and (max-width: 980px) {

      #main {
        background: rgba(255, 255, 255, 0.925);
      }

        #main .toggle {
          display: block;
        }

    }

    @media screen and (max-width: 480px) {

      #main {
        -moz-transition: opacity 0.5s ease, visibility 0.5s;
        -webkit-transition: opacity 0.5s ease, visibility 0.5s;
        -ms-transition: opacity 0.5s ease, visibility 0.5s;
        transition: opacity 0.5s ease, visibility 0.5s;
        width: 100%;
        background: #fff;
        text-align: center;
      }

        body.is-loading-1 #main {
          left: auto !important;
          right: auto !important;
        }

        body.fullscreen #main {
          left: auto !important;
          right: auto !important;
          opacity: 0;
        }

        #main .toggle {
          display: none;
        }

    }
/* ... */

